// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comment 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "comment": [
                  {
                    "children": {
                      "LComment": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{#",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{#/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LComment",
                            "tokenTypeIdx": 5,
                          },
                          "tokenTypeIdx": 5,
                        },
                      ],
                      "RComment": [
                        {
                          "endColumn": 5,
                          "endLine": 1,
                          "endOffset": 4,
                          "image": "#}",
                          "startColumn": 4,
                          "startLine": 1,
                          "startOffset": 3,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /#\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RComment",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "comment",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Comment 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "comment": [
                  {
                    "children": {
                      "Comment": [
                        {
                          "endColumn": 20,
                          "endLine": 1,
                          "endOffset": 19,
                          "image": "This is a comment",
                          "startColumn": 4,
                          "startLine": 1,
                          "startOffset": 3,
                          "tokenType": {
                            "CATEGORIES": [],
                            "LINE_BREAKS": true,
                            "PATTERN": /\\[\\\\S\\\\s\\]\\*\\?\\(\\?=\\\\s\\*#\\}\\)/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "Comment",
                            "tokenTypeIdx": 7,
                          },
                          "tokenTypeIdx": 7,
                        },
                      ],
                      "LComment": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{#",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{#/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LComment",
                            "tokenTypeIdx": 5,
                          },
                          "tokenTypeIdx": 5,
                        },
                      ],
                      "RComment": [
                        {
                          "endColumn": 23,
                          "endLine": 1,
                          "endOffset": 22,
                          "image": "#}",
                          "startColumn": 22,
                          "startLine": 1,
                          "startOffset": 21,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /#\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RComment",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "comment",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Comment 3`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "comment": [
                  {
                    "children": {
                      "Comment": [
                        {
                          "endColumn": 15,
                          "endLine": 3,
                          "endOffset": 32,
                          "image": "First line
    Second line",
                          "startColumn": 5,
                          "startLine": 2,
                          "startOffset": 7,
                          "tokenType": {
                            "CATEGORIES": [],
                            "LINE_BREAKS": true,
                            "PATTERN": /\\[\\\\S\\\\s\\]\\*\\?\\(\\?=\\\\s\\*#\\}\\)/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "Comment",
                            "tokenTypeIdx": 7,
                          },
                          "tokenTypeIdx": 7,
                        },
                      ],
                      "LComment": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{#",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{#/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LComment",
                            "tokenTypeIdx": 5,
                          },
                          "tokenTypeIdx": 5,
                        },
                      ],
                      "RComment": [
                        {
                          "endColumn": 4,
                          "endLine": 4,
                          "endOffset": 37,
                          "image": "#}",
                          "startColumn": 3,
                          "startLine": 4,
                          "startOffset": 36,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /#\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RComment",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "comment",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Template 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {},
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Template 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "text": [
                  {
                    "children": {
                      "Text": [
                        {
                          "endColumn": 11,
                          "endLine": 1,
                          "endOffset": 10,
                          "image": "Hello world",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "LINE_BREAKS": true,
                            "PATTERN": [Function],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "Text",
                            "tokenTypeIdx": 19,
                          },
                          "tokenTypeIdx": 19,
                        },
                      ],
                    },
                    "name": "text",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Variable 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 5,
                          "endLine": 1,
                          "endOffset": 4,
                          "image": "}}",
                          "startColumn": 4,
                          "startLine": 1,
                          "startOffset": 3,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Variable 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 8,
                          "endLine": 1,
                          "endOffset": 7,
                          "image": "}}",
                          "startColumn": 7,
                          "startLine": 1,
                          "startOffset": 6,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "number": [
                              {
                                "children": {
                                  "Number": [
                                    {
                                      "endColumn": 5,
                                      "endLine": 1,
                                      "endOffset": 4,
                                      "image": "42",
                                      "startColumn": 4,
                                      "startLine": 1,
                                      "startOffset": 3,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "PATTERN": /\\[0-9\\]\\+\\(\\?:\\\\\\.\\[0-9\\]\\+\\)\\?\\(\\[Ee\\]\\[\\\\\\+\\\\-\\]\\[0-9\\]\\+\\)\\?/,
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "Number",
                                        "tokenTypeIdx": 4,
                                      },
                                      "tokenTypeIdx": 4,
                                    },
                                  ],
                                },
                                "name": "number",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;
